--- a/src/Component/HR/Style/FileStyle.css
+++ b/src/Component/HR/Style/FileStyle.css
@@ -1,61 +1,166 @@
 /* Start Files Page */
 .files-page {
-    flex-direction: row-reverse;
-    align-items: flex-start;
+  flex-direction: row-reverse;
+  align-items: flex-start;
+}
+
+@media (max-width: 767px) {
+  .files-page {
+    flex-direction: column;
+    align-items: normal;
   }
-  @media (max-width: 767px) {
-    .files-page {
-      flex-direction: column;
-      align-items: normal;
-    }
-  }
-  .files-page .files-stats {
-    min-width: 260px;
-  }
-  .files-page .files-stats .icon {
-    width: 40px;
-    height: 40px;
-    margin-right: 10px;
-  }
-  .files-page .files-stats .size {
-    margin-left: auto;
-  }
-  .files-page .files-stats .blue {
-    background-color: rgb(0 117 255 / 20%);
-  }
-  .files-page .files-stats .green {
-    background-color: rgb(34 197 94 / 20%);
-  }
-  .files-page .files-stats .red {
-    background-color: rgb(244 67 54 / 20%);
-  }
-  .files-page .files-stats .orange {
-    background-color: rgb(245 158 11 / 20%);
-  }
-  .files-page .files-stats .upload {
-    margin: 15px auto 0;
-    padding: 10px 15px;
-    transition: 0.3s;
-  }
-  .files-page .files-stats .upload:hover {
-    background-color: var(--blue-alt-color);
-  }
-  .files-page .files-stats .upload:hover i {
-    animation: go-up 0.8s infinite;
-  }
-  .files-page .files-content {
-    flex: 1;
-    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-  }
-  .files-page .files-content img {
-    width: 64px;
-    height: 64px;
-    transition: 0.3s;
-  }
-  .files-page .files-content .file:hover img {
-    transform: rotate(5deg);
-  }
-  .files-page .files-content .info {
-    border-top: 1px solid #eee;
-  }
-  /* End Files Page */
+}
+
+.files-page .files-stats {
+  min-width: 260px;
+}
+
+.files-page .files-stats .icon {
+  width: 40px;
+  height: 40px;
+  margin-right: 10px;
+}
+
+.files-page .files-stats .size {
+  margin-left: auto;
+}
+
+.files-page .files-stats .blue {
+  background-color: rgb(0 117 255 / 20%);
+}
+
+.files-page .files-stats .green {
+  background-color: rgb(34 197 94 / 20%);
+}
+
+.files-page .files-stats .red {
+  background-color: rgb(244 67 54 / 20%);
+}
+
+.files-page .files-stats .orange {
+  background-color: rgb(245 158 11 / 20%);
+}
+
+.files-page .files-stats .upload {
+  margin: 15px auto 0;
+  padding: 10px 15px;
+  transition: 0.3s;
+}
+
+.files-page .files-stats .upload:hover {
+  background-color: var(--blue-alt-color);
+}
+
+.files-page .files-stats .upload:hover i {
+  animation: go-up 0.8s infinite;
+}
+
+.files-page .files-content {
+  flex: 1;
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+}
+
+.files-page .files-content img {
+  width: 64px;
+  height: 64px;
+  transition: 0.3s;
+}
+
+.files-page .files-content .file:hover img {
+  transform: rotate(5deg);
+}
+
+.files-page .files-content .info {
+  border-top: 1px solid #eee;
+}
+
+/* End Files Page */
+/* start file received */
+@import url(https://fonts.googleapis.com/css?family=Roboto:300,400,700&display=swap);
+.sectionFileRecived {
+  font-family: "Roboto", sans-serif;
+  background: #f1f5f9;
+  min-height: 100vh;
+  position: relative;
+}
+
+.section-50 {
+  padding: 50px 0;
+}
+
+.m-b-50 {
+  margin-bottom: 50px;
+}
+
+.dark-link {
+  color: #333;
+}
+
+.heading-line {
+  position: relative;
+  padding-bottom: 5px;
+}
+
+.heading-line:after {
+  content: "";
+  height: 4px;
+  width: 75px;
+  background-color: #29B6F6;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+}
+
+.notification-ui_dd-content {
+  margin-bottom: 30px;
+}
+
+.notification-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  padding: 20px;
+  margin-bottom: 7px;
+  background: #fff;
+  -webkit-box-shadow: 0 3px 10px rgba(0, 0, 0, 0.06);
+  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.06);
+}
+
+.notification-list--unread {
+  border-left: 2px solid #29B6F6;
+}
+
+.notification-list .notification-list_content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.notification-list .notification-list_content .notification-list_img img {
+  height: 48px;
+  width: 48px;
+  border-radius: 50px;
+  margin-right: 20px;
+}
+
+.notification-list .notification-list_content .notification-list_detail p {
+  margin-bottom: 5px;
+  line-height: 1.2;
+}
+
+.notification-list .notification-list_feature-img img {
+  height: 48px;
+  width: 48px;
+  border-radius: 5px;
+  margin-left: 20px;
+}
+.hoverFile{
+  padding: 0px !important;
+
+}
+.hoverFile:hover{
+  background-color: #bce5ea !important;
+}
