--- a/src/Component/Event/Event.css
+++ b/src/Component/Event/Event.css
@@ -2,6 +2,7 @@
   padding-top: 40px;
   background: #e6e6fa;
 }
+
 .card {
   box-shadow: 0 20px 27px 0 rgb(0 0 0 / 5%);
 }
@@ -32,6 +33,7 @@ a {
   color: #fff;
   border-color: danger;
 }
+
 .favorite-icon a {
   display: inline-block;
   width: 30px;
@@ -51,9 +53,11 @@ a {
   right: 22px;
   top: 22px;
 }
+
 .fs-14 {
   font-size: 14px;
 }
+
 .bg-soft-secondary {
   background-color: rgba(116, 120, 141, 0.15) !important;
   color: #74788d !important;
@@ -62,6 +66,7 @@ a {
 .mt-1 {
   margin-top: 0.25rem !important;
 }
+
 .testimagenotfoun {
   border-radius: 50px;
   border-width: 0;
@@ -75,11 +80,13 @@ a {
   max-width: 100%;
   max-height: 100%;
 }
+
 .testimagenotfoun img {
   border-radius: 50px;
   height: 300px;
   width: 300px;
 }
+
 .buttonEvent {
   margin: 0.5em;
   background: black;
@@ -93,9 +100,11 @@ a {
   z-index: 1;
   overflow: hidden;
 }
+
 .buttonEvent:hover {
   color: black;
 }
+
 .buttonEvent:after {
   content: "";
   background: white;
@@ -118,4 +127,13 @@ a {
   transform: skewX(-45deg) scale(1, 1);
   -webkit-transition: all 0.5s;
   transition: all 0.5s;
+}
+
+.eventLoaderCenter {
+  background-color: #314047 !important;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 100;
 }
