--- a/src/index.css
+++ b/src/index.css
@@ -1,20 +1,31 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+@import url('https://fonts.googleapis.com/css2?family=Cairo:wght@200..1000&display=swap');
 
+body,
+p,
+a,
+li,
+td,
+th,
+h1,
+h2,
+h3,
+h4,
+h5,
+span,
+div,
+button,
+label,
+input,textarea {
+  font-family: "Cairo",Avenir, Helvetica, Arial, sans-serif !important;
+  font-style: normal;
+  font-optical-sizing: auto
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
 
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap');
-
-*{
+* {
   font-family: 'Roboto', sans-serif;
 }
 
@@ -25,34 +36,36 @@ code {
 }
 
 
- 
+
 ::-webkit-scrollbar {
-width: 13px;
+  width: 13px;
 }
 
 ::-webkit-scrollbar-track {
-border: 7px solid #232943;
-box-shadow: inset 0 0 2.5px 2px rgba(0, 0, 0, 0.5);
-border-radius: 3px;
+  border: 7px solid #232943;
+  box-shadow: inset 0 0 2.5px 2px rgba(0, 0, 0, 0.5);
+  border-radius: 3px;
 
 
-background-color: rgb(239, 239, 239);
+  background-color: rgb(239, 239, 239);
 }
 
 ::-webkit-scrollbar-thumb {
-/* background: linear-gradient(90deg, #9e4673, #3d4a59); */
-border-radius: 3px;
+  /* background: linear-gradient(90deg, #9e4673, #3d4a59); */
+  border-radius: 3px;
 
 
-background-color: #666;
+  background-color: #666;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-/* background: linear-gradient(270deg, #9e4673, #3d4a59, #9e4673); */
+  /* background: linear-gradient(270deg, #9e4673, #3d4a59, #9e4673); */
 
-background-color: #555;
+  background-color: #555;
 
 }
 
 /* for Firefox */
-html {scrollbar-color: #9e4673 #3d4a59;} 
+html {
+  scrollbar-color: #9e4673 #3d4a59;
+}
