--- a/src/Component/HR/Style/FileStyle.css
+++ b/src/Component/HR/Style/FileStyle.css
@@ -76,10 +76,9 @@
 
 /* End Files Page */
 /* start file received */
-@import url(https://fonts.googleapis.com/css?family=Roboto:300,400,700&display=swap);
 .sectionFileRecived {
-  font-family: "Roboto", sans-serif;
-  background: #f1f5f9;
+  /* font-family: "Roboto", sans-serif;
+  background: #f1f5f9; */
   min-height: 100vh;
   position: relative;
 }
