--- a/src/Component/mainMnue/Menue.css
+++ b/src/Component/mainMnue/Menue.css
@@ -21,8 +21,15 @@
   position: relative;
   left: 0%;
 }
+
+@media (max-width: 768px) {
+  .Project .boxContainer {
+    top: 50%;
+  }
+}
+
 .Project .seletMode {
-  box-shadow:rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+  box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
   background-color: white;
   border-radius: 30px;
   border-width: 0;
