--- a/src/App.css
+++ b/src/App.css
@@ -26,7 +26,7 @@
 
 section {
     width: 100%;
-    height: 100%;
+    /* height: 100%; */
     display: flex;
     justify-content: center;
     align-items: center;
