--- a/src/App.css
+++ b/src/App.css
@@ -172,7 +172,44 @@ ul {
     margin-left: auto;
     margin-right: auto;
 }
-
+@keyframes rotating {
+    from {
+      -ms-transform: rotate(0deg);
+      -moz-transform: rotate(0deg);
+      -webkit-transform: rotate(0deg);
+      -o-transform: rotate(0deg);
+      transform: rotate(0deg);
+    }
+    to {
+      -ms-transform: rotate(360deg);
+      -moz-transform: rotate(360deg);
+      -webkit-transform: rotate(360deg);
+      -o-transform: rotate(360deg);
+      transform: rotate(360deg);
+    }
+  }
+  
+  .refreshButton {
+      &:hover {
+          cursor: pointer;
+          -webkit-animation: rotating 1.2s linear infinite;
+          -moz-animation: rotating 1.2s linear infinite;
+          -ms-animation: rotating 1.2s linear infinite;
+          -o-animation: rotating 1.2s linear infinite;
+          animation: rotating 1.2s linear infinite;
+      }
+      &:active {
+          .icon {
+              fill: #5ac938;
+          }
+  
+      }
+  }
+  .posisionRefersh{
+    position: fixed;
+    bottom: 30px;
+    right: 50%
+  }
 /* Small */
 /* @media (min-width: 768px) {
     .container {
