--- a/src/Component/Product/STyle.css
+++ b/src/Component/Product/STyle.css
@@ -182,7 +182,7 @@
   /* Optional: Set margins to zero */
 }
 
-@media print {
+/* @media print {
   @page {
     margin: 1cm;
   } 
@@ -196,7 +196,7 @@
     color: black;
     font-size: 12px;
   } 
-}
+} */
 
 .a4-page {
   width: 210mm;
